Update github workflow

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,6 +10,8 @@ on:
 env:
   ADDRESS: ${{ secrets.ADDRESS }}
   PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+  TESTNET_ADDRESS: ${{ secrets.TESTNET_ADDRESS }}
+  TESTNET_PRIVATE_KEY: ${{ secrets.TESTNET_PRIVATE_KEY }}
 
 jobs:
   build:
@@ -32,6 +34,8 @@ jobs:
       run: |
         echo "NETWORK=testnet" >> $GITHUB_ENV
         echo "ACCESS_NODE=https://access-testnet.onflow.org" >> $GITHUB_ENV
+        echo "ADDRESS=$TESTNET_ADDRESS" >> $GITHUB_ENV
+        echo "PRIVATE_KEY=$TESTNET_PRIVATE_KEY" >> $GITHUB_ENV
         echo $GITHUB_ENV
     - name: Set env to mainnet
       if: endsWith(github.ref, '/main')
